# uci-banknotes-classification

./: README.md  pyproject.toml  requirements.txt
data_exploration/: data-exploration-v0.ipynb
