[tool.poetry]
name = "uci-banknotes-classification"
version = "0.1.0"
description = "Classification of banknotes"
authors = ["sameervk <sameervk.iitkgp@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "4.1.5"
pandas = "^2.2.1"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
